syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "SakhaTyla.Web.Protos.BookAuthorships";

message BookAuthorship {
    int32 id = 1;
    google.protobuf.Timestamp creationDate = 2;
    google.protobuf.Timestamp modificationDate = 3;
    int32 creationUserId = 4;
    int32 modificationUserId = 5;
    int32 bookId = 6;
    int32 authorId = 7;
    int32 weight = 8;
}

message BookAuthorshipPageModel {
    repeated BookAuthorship pageItems = 1;
    int32 totalItems = 2;
    int32 currentPageIndex = 3;
}